Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43821

QQuickWidget doesn't invoke provided virtual functions for drag-drop

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.5.0
    • 5.4.0
    • Quick: Widget
    • None
    • Windows 7

      QQuickWidget has the virtual functions dragEnterEvent(), dragMoveEvent(), dragLeaveEvent() and dropEvent(). However, after setting setAcceptDrops(true), and subclassing QQuickWidget it appears these methods are not called.

      See also forum topic: http://qt-project.org/forums/viewthread/51669

      The suggestion from the forum was to reimplement QWidget::event() and this has revealed that the events are in fact coming through, but the virtual methods are not called and therefore cannot be used.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            frankiesimon Frankie Simon
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes