Implement dnd support in QQuickWidget differently

This way subclasses can reimplement functions like dragEnterEvent().

Task-number: QTBUG-43821
Change-Id: I24bd14de8aab5ab741bc36330b4dcf7c83dedbf6
Reviewed-by: Gunnar Sletta <gunnar@sletta.org>